# ai-invention-54ecf4-dictionary-constrained-oblique-tree-sums

./: README.md
dataset_iter1_tabular_bench/demo/: data_demo.ipynb  demo_data.json
dataset_iter1_tabular_bench/src/: artifact_metadata.json  artifact_title.txt  data.py  full_data_out.json  mini_data_out.json  preview_data_out.json
evaluation_iter3_dots_stat_eval/demo/: demo_data.json  eval_demo.ipynb
evaluation_iter3_dots_stat_eval/src/: artifact_metadata.json  artifact_title.txt  eval.py  eval_out.json  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter3_dots_stat_eval/src/dots_eval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
experiment_iter2_dots_benchmark/demo/: demo_data.json  method_demo.ipynb
experiment_iter2_dots_benchmark/src/: artifact_metadata.json  artifact_title.txt  full_method_out.json  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
paper/: paper.tex  references.bib
