[project]
name = "dots-eval"
version = "0.1.0"
description = "Rigorous statistical evaluation of DOTS experiment"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy>=1.26.0,<2.3.0",
    "scipy>=1.11.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
